# src/middleware/NotFoundHandler.ts
@@ -2,7 +2,7 @@ import { Request, Response } from "express"
 
 const notFoundHandler = (request: Request, response: Response) => {
   response.status(404).json({
-    errorMessage: [`Endpoint not found at ${request.originalUrl}`],
+    errorMessages: [`Endpoint not found at ${request.originalUrl}`],
   })
 }
 
